Install DevTools plugin for Grav

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -484,6 +484,11 @@
       executable: /bin/bash
   - name: Create symlink for gravity in /usr/local/bin
     shell: ln -sv /opt/gravity/gravity.py /usr/local/bin/gravity
+  - name: Install DevTools plugin for Grav
+    shell:
+      cmd: gpm install devtools
+      chdir: /opt/grav-{{ grav_version }}
+      executable: /bin/bash
 
 -
   # add default user to dialout group
