npm install -g sass@1.70.0

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -337,6 +337,7 @@
     yarn_version: "3.5.0"
     yo_version: "4.3.1"
     generator_code_version: "1.7.5"
+    sass_version: "1.70.0"
 
   tasks:   # Test Node JS Tools versions
   - name: Install Yarn
@@ -382,6 +383,8 @@
       version: "{{ yo_version }}"
     - name: generator-code
       version: "{{ generator_code_version }}"
+    - name: sass
+      version: "{{ sass_version }}"
 
 -
   # install Hugo v0.101.0 (extended)
